replace new Double(...) with Double.valueOf(...)