@@ -303,7 +303,7 @@ public class TableCellTest {
       OdfTableCell cell;
       for (int i = 1; i <= 10; i++) {
         cell = tbl.getCellByPosition("A" + i);
-        cell.setDoubleValue(new Double(i));
+        cell.setDoubleValue(Double.valueOf(i));
       }
       cell = tbl.getCellByPosition("A11");
       cell.setFormula("=sum(A1:A10)");
@@ -967,7 +967,7 @@ public class TableCellTest {
     cell.setCurrencyFormat("$", formats[0]);
 
     cell = table.getCellByPosition("J2");
-    cell.setCurrencyValue(new Double(32), "CNY");
+    cell.setCurrencyValue(Double.valueOf(32), "CNY");
     cell.setCurrencyFormat("CNY", formats[1]);
 
     cell = table.getCellByPosition("J3");
